--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "node-sass": "^4.11.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
-    "webpack": "^3.5.6",
-    "webpack-dev-server": ">=3.1.11"
+    "webpack": ">=4.32.2",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": ">=3.5.0"
   },
   "dependencies": {
     "history": "^4.7.2",
