--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "history": "^4.7.2",
+    "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-dom": ">=16.0.1",
     "react-redux": "^7.0.0",
